force-app/main/default/objects/Case/fields/Address_With_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_With_Pin_Code__c</fullName>
    <label>New Address</label>
    <type>Address</type>
</CustomField>