force-app/main/default/objects/Case/fields/App_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Order_Id__c</fullName>
    <label>App Order Id</label>
    <type>TextArea</type>
</CustomField>