force-app/main/default/objects/Case/fields/App_Version__c.field-meta.xml
<CustomField>
    <fullName>App_Version__c</fullName>
    <label>App Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>