force-app/main/default/objects/Case/fields/Approval_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Approval_Remarks__c</fullName>
    <label>Approval Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>