force-app/main/default/objects/Case/fields/Assigned_to_Admin__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to Admin?</label>
    <type>Checkbox</type>
</CustomField>