force-app/main/default/objects/Case/fields/Assigned_to_Different_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Different_Team__c</fullName>
    <formula>IF(
    ISBLANK(Marketing_Team__c) &amp;&amp; ISBLANK(Warehouse_Team_Member__c) &amp;&amp; ISBLANK(RefundTeamMember__c),
    FALSE,
    TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Different Team?</label>
    <type>Checkbox</type>
</CustomField>