force-app/main/default/objects/Case/fields/Assigned_to_Dropshipping__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Dropshipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to Dropshipping</label>
    <type>Checkbox</type>
</CustomField>