force-app/main/default/objects/Case/fields/Assigned_to_WH_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_WH_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to WH Team?</label>
    <type>Checkbox</type>
</CustomField>