force-app/main/default/objects/Case/fields/Availability_Window__c.field-meta.xml
<CustomField>
    <fullName>Availability_Window__c</fullName>
    <label>Availability Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 1 week</fullName>
            </value>
            <value>
                <fullName>1-2 Weeks</fullName>
            </value>
            <value>
                <fullName>2-4 Weeks</fullName>
            </value>
            <value>
                <fullName>1 Month +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>