force-app/main/default/objects/Case/fields/AWB_Number__c.field-meta.xml
<CustomField>
    <fullName>AWB_Number__c</fullName>
    <label>AWB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>