force-app/main/default/objects/Case/fields/Brand_Details__c.field-meta.xml
<CustomField>
    <fullName>Brand_Details__c</fullName>
    <label>Brand Details</label>
    <length>80</length>
    <type>Text</type>
</CustomField>