force-app/main/default/objects/Case/fields/Callback_Requested__c.field-meta.xml
<CustomField>
    <fullName>Callback_Requested__c</fullName>
    <label>Callback Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>