force-app/main/default/objects/Case/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>