force-app/main/default/objects/Case/fields/Caption__c.field-meta.xml
<CustomField>
    <fullName>Caption__c</fullName>
    <label>Caption</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>