force-app/main/default/objects/Case/fields/Case_Assigned_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_DateTime__c</fullName>
    <label>Case Assigned DateTime</label>
    <type>DateTime</type>
</CustomField>