force-app/main/default/objects/Case/fields/Case_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Description__c</fullName>
    <label>Closure Remark</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>