force-app/main/default/objects/Case/fields/Case_Reassigned_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Case_Reassigned_DateTime__c</fullName>
    <label>Case Reassigned DateTime</label>
    <type>DateTime</type>
</CustomField>