force-app/main/default/objects/Case/fields/Case_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Status__c</fullName>
    <label>Case Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned to CS Team</fullName>
            </value>
            <value>
                <fullName>Assigned to Warehouse Team</fullName>
            </value>
            <value>
                <fullName>Assigned to Refund Team</fullName>
            </value>
            <value>
                <fullName>Assigned to Marketing Team</fullName>
            </value>
            <value>
                <fullName>Referred Back to CS Team</fullName>
            </value>
            <value>
                <fullName>Closed as Duplicate Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>