force-app/main/default/objects/Case/fields/Case_User_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Case_User_Assigned_To__c</fullName>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case User Assigned To</label>
    <type>Text</type>
</CustomField>