force-app/main/default/objects/Case/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Customer Profile</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Camapign /Reviews</fullName>
            </value>
            <value>
                <fullName>Pre Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>