force-app/main/default/objects/Case/fields/Channel_Case__c.field-meta.xml
<CustomField>
    <fullName>Channel_Case__c</fullName>
    <label>Case Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHAT</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>OutBound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>