force-app/main/default/objects/Case/fields/Comments_JSON__c.field-meta.xml
<CustomField>
    <fullName>Comments_JSON__c</fullName>
    <label>Comments JSON</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>