force-app/main/default/objects/Case/fields/Communication_Mode__c.field-meta.xml
<CustomField>
    <fullName>Communication_Mode__c</fullName>
    <label>Communication Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Social - IG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>