force-app/main/default/objects/Case/fields/Courier_Issue__c.field-meta.xml
<CustomField>
    <fullName>Courier_Issue__c</fullName>
    <label>Courier Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Address</fullName>
            </value>
            <value>
                <fullName>Communication Problems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>