force-app/main/default/objects/Case/fields/Courier_Partner__c.field-meta.xml
<CustomField>
    <fullName>Courier_Partner__c</fullName>
    <label>Courier Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>