force-app/main/default/objects/Case/fields/CS_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>CS_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>