force-app/main/default/objects/Case/fields/CSE_Name__c.field-meta.xml
<CustomField>
    <fullName>CSE_Name__c</fullName>
    <label>CSE Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>