force-app/main/default/objects/Case/fields/CSE_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CSE_Remarks__c</fullName>
    <label>CSE Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>