force-app/main/default/objects/Case/fields/Current_PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_PIN_Code__c</fullName>
    <label>Current PIN Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>