force-app/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(AccountId)), 
    Account.Name,
    IF(
        NOT(ISBLANK(ContactId)),
        Contact.FirstName + &apos; &apos; + Contact.LastName,
        &apos;NA&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>