force-app/main/default/objects/Case/fields/Customer_s_Availability__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Availability__c</fullName>
    <label>Customer&apos;s Availability</label>
    <type>DateTime</type>
</CustomField>