force-app/main/default/objects/Case/fields/Customer_s_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Request__c</fullName>
    <label>Customer&apos;s Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Cancellation</fullName>
            </value>
            <value>
                <fullName>Partial Cancellation</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>