force-app/main/default/objects/Case/fields/Date_Of_Order__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Order__c</fullName>
    <label>Date Of Order</label>
    <type>Date</type>
</CustomField>