force-app/main/default/objects/Case/fields/Describe_Information_Needed__c.field-meta.xml
<CustomField>
    <fullName>Describe_Information_Needed__c</fullName>
    <label>Describe Information Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>