force-app/main/default/objects/Case/fields/Device_Handset__c.field-meta.xml
<CustomField>
    <fullName>Device_Handset__c</fullName>
    <label>Device - Handset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>