force-app/main/default/objects/Case/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Freebies</label>
    <length>80</length>
    <type>Text</type>
</CustomField>