force-app/main/default/objects/Case/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Issued - CX informed</fullName>
            </value>
            <value>
                <fullName>Changes done - CX informed</fullName>
            </value>
            <value>
                <fullName>Correction Done - CX informed</fullName>
            </value>
            <value>
                <fullName>Coupon Released - CX informed</fullName>
            </value>
            <value>
                <fullName>Escalated to Marketing</fullName>
            </value>
            <value>
                <fullName>Feedback Noted</fullName>
            </value>
            <value>
                <fullName>Feedback taken</fullName>
            </value>
            <value>
                <fullName>Feedback taken - Issue Resolved</fullName>
            </value>
            <value>
                <fullName>lmformed to Content</fullName>
            </value>
            <value>
                <fullName>Incomplete details</fullName>
            </value>
            <value>
                <fullName>Information Given</fullName>
            </value>
            <value>
                <fullName>Issue Resolved - CX informed</fullName>
            </value>
            <value>
                <fullName>Order Cancelled - CX informed</fullName>
            </value>
            <value>
                <fullName>Order Retained</fullName>
            </value>
            <value>
                <fullName>Replacement done - Issue Resolved</fullName>
            </value>
            <value>
                <fullName>Request shared with Marketing</fullName>
            </value>
            <value>
                <fullName>Requested to Share Email</fullName>
            </value>
            <value>
                <fullName>Request Booked</fullName>
            </value>
            <value>
                <fullName>RVP Cancelled - CX informed</fullName>
            </value>
            <value>
                <fullName>RVP done - Refund Initiated</fullName>
            </value>
            <value>
                <fullName>Status Informed</fullName>
            </value>
            <value>
                <fullName>Benefit not Issued - CX informed</fullName>
            </value>
            <value>
                <fullName>CX not available - RVP cancelled</fullName>
            </value>
            <value>
                <fullName>CX not Contactable</fullName>
            </value>
            <value>
                <fullName>CX understanding - Information given</fullName>
            </value>
            <value>
                <fullName>Email sent to Brand</fullName>
            </value>
            <value>
                <fullName>Issued Resolved</fullName>
            </value>
            <value>
                <fullName>Not Eligible - CX informed</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Payment reversed - CXinformed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>