force-app/main/default/objects/Case/fields/Dropshipping_User__c.field-meta.xml
<CustomField>
    <fullName>Dropshipping_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dropshipping User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>