force-app/main/default/objects/Case/fields/Error_message__c.field-meta.xml
<CustomField>
    <fullName>Error_message__c</fullName>
    <label>Error message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>