force-app/main/default/objects/Case/fields/Expected_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Time__c</fullName>
    <label>Expected Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>