force-app/main/default/objects/Case/fields/Expected_Delivery_By__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_By__c</fullName>
    <label>Expected Delivery By</label>
    <type>DateTime</type>
</CustomField>