force-app/main/default/objects/Case/fields/Expected_RVP_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_RVP_date__c</fullName>
    <label>Expected RVP date</label>
    <type>Date</type>
</CustomField>