force-app/main/default/objects/Case/fields/Handset_model__c.field-meta.xml
<CustomField>
    <fullName>Handset_model__c</fullName>
    <label>Handset model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>