force-app/main/default/objects/Case/fields/Hash_Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>Hash_Tag_Id__c</fullName>
    <label>Hash Tag Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>