force-app/main/default/objects/Case/fields/Inbound_Dealy_In_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Dealy_In_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InBound Dealy In Delivery</label>
    <type>Checkbox</type>
</CustomField>