force-app/main/default/objects/Case/fields/InBound_PinCode_not_Serviceable__c.field-meta.xml
<CustomField>
    <fullName>InBound_PinCode_not_Serviceable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InBound PinCode not Serviceable</label>
    <type>Checkbox</type>
</CustomField>