force-app/main/default/objects/Case/fields/Inital_Commented_Date__c.field-meta.xml
<CustomField>
    <fullName>Inital_Commented_Date__c</fullName>
    <label>Inital Commented Date</label>
    <type>Date</type>
</CustomField>