force-app/main/default/objects/Case/fields/Instagram_ID__c.field-meta.xml
<CustomField>
    <fullName>Instagram_ID__c</fullName>
    <label>Instagram ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>