force-app/main/default/objects/Case/fields/Invoice_Image__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Image__c</fullName>
    <label>Invoice Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>