force-app/main/default/objects/Case/fields/Is_Closure_SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>Is_Closure_SLA_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closure SLA Breached?</label>
    <type>Checkbox</type>
</CustomField>