force-app/main/default/objects/Case/fields/Is_Re_Opened__c.field-meta.xml
<CustomField>
    <fullName>Is_Re_Opened__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Re-Opened?</label>
    <type>Checkbox</type>
</CustomField>