force-app/main/default/objects/Case/fields/Is_With_Refund_Team__c.field-meta.xml
<CustomField>
    <fullName>Is_With_Refund_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is With Refund Team?</label>
    <type>Checkbox</type>
</CustomField>