force-app/main/default/objects/Case/fields/isFollowUp__c.field-meta.xml
<CustomField>
    <fullName>isFollowUp__c</fullName>
    <label>isFollowUp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>