force-app/main/default/objects/Case/fields/Last_Response__c.field-meta.xml
<CustomField>
    <fullName>Last_Response__c</fullName>
    <label>Last Response - Internal</label>
    <type>DateTime</type>
</CustomField>