force-app/main/default/objects/Case/fields/Last_Response_External__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_External__c</fullName>
    <label>Last Response - External</label>
    <type>DateTime</type>
</CustomField>