force-app/main/default/objects/Case/fields/Logging_Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Logging_Mobile_number__c</fullName>
    <label>Logging Mobile number</label>
    <type>Phone</type>
</CustomField>