force-app/main/default/objects/Case/fields/Marketing_Team__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>