force-app/main/default/objects/Case/fields/more_Info_Requested__c.field-meta.xml
<CustomField>
    <fullName>more_Info_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>more Info Requested</label>
    <type>Checkbox</type>
</CustomField>