force-app/main/default/objects/Case/fields/Movement_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Movement_Date_Time__c</fullName>
    <label>Movement Date Time</label>
    <type>DateTime</type>
</CustomField>