force-app/main/default/objects/Case/fields/MT_Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>MT_Assignment_Reason__c</fullName>
    <label>Re-Assignment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>