force-app/main/default/objects/Case/fields/MT_Assignment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>MT_Assignment_Remarks__c</fullName>
    <label>MT Assignment Remarks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>