force-app/main/default/objects/Case/fields/Number_of_Times_Sent_to_WH__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Sent_to_WH__c</fullName>
    <label>Number of Times Sent to WH</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>