force-app/main/default/objects/Case/fields/OOS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OOS_Quantity__c</fullName>
    <label>OOS Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>