force-app/main/default/objects/Case/fields/OOS_SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>OOS_SKU_Code__c</fullName>
    <label>OOS SKU Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>