force-app/main/default/objects/Case/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>