force-app/main/default/objects/Case/fields/Order_Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Coupon_Code__c</fullName>
    <formula>OrderId__r.Coupon_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Coupon Code</label>
    <type>Text</type>
</CustomField>