force-app/main/default/objects/Case/fields/Order_Image__c.field-meta.xml
<CustomField>
    <fullName>Order_Image__c</fullName>
    <label>Order Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>